# discord-rag-kyronet

./: .env.example  .gitignore  README.md  docker-compose.yml  nixpacks.toml  package.json  railway.json  railway.toml  start.sh
bot/src/: index.js
bot/src/commands/ask/: ask.js
docs/: API.md  DEPLOYMENT.md
production/api/: .env  Dockerfile  pyproject.toml
production/api/src/api/: auth.py  dashboard.py  errors.py  main.py  stats.py  user_import.py
production/api/src/api/inference/: State.py  __init__.py  agentic_inference.py  citations.py  inference.py  prompting.py  streaming_chat.py
production/api/src/api/platform/: __init__.py  auth.py  database.py  frontend.py  router.py
production/api/src/api/platform_app/: auth.py  database.py  frontend.py  models.py  router.py
production/api/src/api/v1/: models.py  router.py
production/indexing_pipeline/: .env
production/indexing_pipeline/src/indexing_pipeline/: main.py
scheduler/: Dockerfile  railway.json
scheduler/src/: config.js  package.json  scheduler.js
